preset button overflow bandaid fix

--- a/web/css/presets.style.css
+++ b/web/css/presets.style.css
@@ -36,6 +36,15 @@
 
 .presetItemTitle {
     flex: 1;
+
+    
+    /* bandaid solution to the buttons overflowing */
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow:hidden;
+    min-height: 25px;
+    margin-bottom: 10px;
+    width: calc(100% - 20px);
 }
 
 .presetItem {
